--- a/public/css/stage-plot.css
+++ b/public/css/stage-plot.css
@@ -961,7 +961,8 @@ body.duplicating-element * {
   align-items: flex-start;
   display: flex;
   gap: var(--spacing-lg);
-  margin: 0 0 var(--spacing-lg);
+  margin: 0 auto var(--spacing-lg);
+  max-width: 1309px;
 }
 
 #input-list,
